--- a/C_CODE/Readme
+++ b/C_CODE/Readme
@@ -1,2 +1,3 @@
-Eclipse environment:
-Plugin in eclipse : http://www.ac6-tools.com/content.php/content_SW4MCU/lang_en_US.xphp
+Eclipse environment.
+Toolchain(Plugin) : http://www.ac6-tools.com/content.php/content_SW4MCU/lang_en_US.xphp
+
