--- a/C_CODE/Readme
+++ b/C_CODE/Readme
@@ -1,3 +1,5 @@
-Eclipse environment.
+Eclipse environment:
 Toolchain(Plugin) : http://www.ac6-tools.com/content.php/content_SW4MCU/lang_en_US.xphp
 
+Sublime Text and examples:
+https://github.com/Aghosh993/EL6483_EmbeddedSystems
